<resources>
    <string name="app_name">Заметки</string>
    <string name="title">Название</string>
    <string name="note">Заметка</string>
    <string name="save">Сохранить</string>
    <string name="delete_all">Удалить все</string>
    <string name="delete">Delete</string>
    <string name="photo">photo</string>
    <string name="camera_error">Произошла ошибка при попытке открыть камеру</string>
    <string name="gallery_photos">Фотографии из галереи</string>
    <string name="accept_selected_photos">Accept selected photos</string>
    <string name="delete_selected_photos">Delete selected photos</string>
    <string name="camera_request_failed">Необходим доступ к хранилищу, чтобы загрузить фотографии</string>
    <string name="edit">Edit</string>
    <string name="photo_main">Photo main</string>
    <string name="circle">Circle</string>
    <string name="clear">Clear</string>
    <string name="restore">Восстановить</string>
    <string name="one_photo">One Photo</string>
    <string name="search">Поиск</string>
    <string name="insert_note">Insert note</string>
    <string name="settings">Настройки</string>
    <string name="show_date">Показывать дату</string>
    <string name="sort">Упорядочить</string>
    <string name="filter">Показывать</string>
    <string name="all">Все</string>
    <string name="only_photos">Только с фотографиями</string>
    <string name="only_notes">Только с текстом</string>
    <string name="new_first">Сначала новые</string>
    <string name="old_first">Сначала старые</string>
    <string name="dialog_line">Dialog line</string>
    <string name="gallery">Галерея</string>
    <string name="columns">Расположение</string>
    <string name="one_column">1 колонка</string>
    <string name="two_columns">2 колонки</string>
    <string name="sign">Подпись</string>
    <string name="todo_list">TODO list</string>
    <string name="colon">:</string>
    <string name="clear_row">Clear row</string>
    <string-array name="dialog_array">
        <item>Фото с камеры</item>
        <item>Фото из галереи</item>
    </string-array>
</resources>