<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save_note"
        android:title="@string/save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_accept"
        />
    <item
        android:id="@+id/todo"
        android:title="@string/todo_list"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_todo_list"
        />
    <item
        android:id="@+id/insert_photo"
        android:title="@string/photo"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_photo"
        />
</menu>