...

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/gallery_motion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/BottomSheetStyle"
        app:layoutDescription="@xml/fragment_gallery_xml_gallery_layout_scene">
        <View
            android:id="@+id/gallery_view_top"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/gallery" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gallery_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/recycler_item_gallery" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
...
